--- a/soln/chap01soln.ipynb
+++ b/soln/chap01soln.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Chapter 1\n",
     "\n",
-    "Copyright 2017 Allen Downey\n",
+    "Copyright 2020 Allen Downey\n",
     "\n",
     "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)"
    ]
@@ -19,7 +19,7 @@
    "source": [
     "## Jupyter\n",
     "\n",
-    "Welcome to Modeling and Simulation, welcome to Python, and welcome to Jupyter.\n",
+    "Welcome to *Modeling and Simulation*, welcome to Python, and welcome to Jupyter.\n",
     "\n",
     "This is a Jupyter notebook, which is a development environment where you can write and run Python code.  Each notebook is divided into cells.  Each cell contains either text (like this cell) or Python code.\n",
     "\n",
@@ -33,11 +33,11 @@
     "\n",
     "To run a cell, hold down SHIFT and press ENTER.  \n",
     "\n",
-    "* If you run a text cell, Jupyter typesets the text and displays the result.\n",
+    "* If you run a text cell, Jupyter formats the text and displays the result.\n",
     "\n",
     "* If you run a code cell, Jupyter runs the Python code in the cell and displays the result, if any.\n",
     "\n",
-    "To try it out, edit this cell, change some of the text, and then press SHIFT-ENTER to run it."
+    "To try it out, edit this cell, change some of the text, and then press SHIFT-ENTER to format it."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "source": [
     "### Using the notebooks\n",
     "\n",
-    "The notebooks for each chapter contain the code from the chapter along with addition examples, explanatory text, and exercises.  I recommend you \n",
+    "The notebooks for each chapter contain the code from the chapter along with additional examples, explanatory text, and exercises.  I recommend you \n",
     "\n",
     "1. Read the chapter first to understand the concepts and vocabulary, \n",
     "2. Run the notebook to review what you learned and see it in action, and then\n",
@@ -125,6 +125,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The first time you run this on a new installation of Python, it might produce a warning message in pink.  That's probably ok, but if you get a message that says `modsim.py depends on Python 3.7 features`, that means you have an older version of Python, and some features in `modsim.py` won't work correctly.\n",
+    "\n",
+    "If you need a newer version of Python, I recommend installing Anaconda.  You'll find more information in the preface of the book.\n",
+    "\n",
+    "You can find out what version of Python and Jupyter you have by running the following cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.5\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0.2\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter-notebook --version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Configuring Jupyter\n",
     "\n",
     "The following cell:\n",
@@ -138,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,51 +192,6 @@
     "\n",
     "# Configure Jupyter to display the assigned value after an assignment\n",
     "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first time you run this on a new installation of Python, it might produce a warning message in pink.  That's probably ok, but if you get a message that says `modsim.py depends on Python 3.7 features`, that means you have an older version of Python, and some features in `modsim.py` won't work correctly.\n",
-    "\n",
-    "If you need a newer version of Python, I recommend installing Anaconda.  You'll find more information in the preface of the book.\n",
-    "\n",
-    "You can find out what version of Python and Jupyter you have by running the following cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.7.3\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!python --version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.4.0\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!jupyter --version"
    ]
   },
   {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "<Unit('meter')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "<Unit('second')>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        "9.8 <Unit('meter / second ** 2')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "4 <Unit('second')>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "78.4 <Unit('meter')>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "39.2 <Unit('meter / second')>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "381 <Unit('meter')>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "8.817885349720552 <Unit('second')>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "86.41527642726142 <Unit('meter / second')>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -573,19 +573,19 @@
        "<Unit('hour')>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mile = UNITS.mile\n",
-    "hour= UNITS.hour"
+    "hour = UNITS.hour"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "193.30546802805438 <Unit('mile / hour')>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "384.048 <Unit('meter')>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -668,13 +668,14 @@
        "1260.0 <Unit('foot')>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Solution\n",
+    "\n",
     "pole_height + h"
    ]
   },
@@ -697,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +713,7 @@
        "18.0 <Unit('meter / second')>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
