--- a/soln/chap01soln.ipynb
+++ b/soln/chap01soln.ipynb
@@ -117,7 +117,7 @@
     "try:\n",
     "    from modsim import *\n",
     "except ImportError:\n",
-    "    !pip install modsim\n",
+    "    !pip install modsimpy\n",
     "    from modsim import *"
    ]
   },
