--- a/book/book.tex
+++ b/book/book.tex
@@ -5352,7 +5352,7 @@ results = run_simulation(system, update_func)
 
 Figure~\ref{chap18-fig01} shows the results.  The top plot shows simulated glucose levels from the model along with the measured data.  The bottom plot shows simulated insulin levels in tissue fluid, which is in unspecified units, and not to be confused with measured insulin levels in the blood.
 
-With the parameters I chose, the model fits the data well, except for the first few data points, where we don't expect the model to be precise.
+With the parameters I chose, the model fits the data well, except for the first few data points, where we don't expect the model to be accurate.
 
 
 \section{Solving differential equations}
