--- a/soln/chap08soln.ipynb
+++ b/soln/chap08soln.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "if IN_COLAB:\n",
     "    !pip install pint\n",
-    "    !pip install modsimpy"
+    "    !pip install modsimpy\n",
+    "    !mkdir figs"
    ]
   },
   {
