--- a/soln/jump2_soln.ipynb
+++ b/soln/jump2_soln.ipynb
@@ -26,7 +26,9 @@
     "IN_COLAB = 'google.colab' in sys.modules\n",
     "\n",
     "if IN_COLAB:\n",
-    "    !pip install modsimpy"
+    "    !pip install pint==0.9\n",
+    "    !pip install modsimpy\n",
+    "    !mkdir figs"
    ]
   },
   {
