--- a/colab/chap01soln.ipynb
+++ b/colab/chap01soln.ipynb
@@ -81,26 +81,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the notebooks\n",
-    "\n",
-    "The notebooks for each chapter contain the code from the chapter along with additional examples, explanatory text, and exercises.  I recommend you \n",
-    "\n",
-    "1. Read the chapter first to understand the concepts and vocabulary, \n",
-    "2. Run the notebook to review what you learned and see it in action, and then\n",
-    "3. Attempt the exercises.\n",
-    "\n",
-    "If you try to work through the notebooks without reading the book, you're gonna have a bad time.  The notebooks contain some explanatory text, but it is probably not enough to make sense if you have not read the book.  If you are working through a notebook and you get stuck, you might want to re-read (or read!) the corresponding section of the book."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Installing modules\n",
     "\n",
     "These notebooks use standard Python modules like NumPy and SciPy.  I assume you already have them installed in your environment.\n",
     "\n",
-    "They also use two less common modules: Pint, which provides units, and modsim, which contains code I wrote specifically for this book.\n",
+    "They also use two less common modules: Pint, which provides units, and `modsimpy`, which contains code I wrote specifically for this book.\n",
     "\n",
     "The following cells check whether you have these modules already and tries to install them if you don't."
    ]
