--- a/colab/chap03.ipynb
+++ b/colab/chap03.ipynb
@@ -4,32 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling and Simulation in Python\n",
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Modeling and Simulation in Python*\n",
     "\n",
-    "Chapter 3\n",
+    "Copyright 2021 Allen Downey\n",
     "\n",
-    "Copyright 2017 Allen Downey\n",
-    "\n",
-    "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)\n"
+    "License: [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Configure Jupyter so figures appear in the notebook\n",
-    "%matplotlib inline\n",
+    "# check if the libraries we need are installed\n",
     "\n",
-    "# Configure Jupyter to display the assigned value after an assignment\n",
-    "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'\n",
-    "\n",
-    "# import functions from the modsim library\n",
-    "from modsim import *\n",
-    "\n",
-    "# set the random number generator\n",
-    "np.random.seed(7)"
+    "try:\n",
+    "    import pint\n",
+    "except ImportError:\n",
+    "    !pip install pint\n",
+    "    import pint\n",
+    "    \n",
+    "try:\n",
+    "    from modsim import *\n",
+    "except ImportError:\n",
+    "    !pip install modsimpy\n",
+    "    from modsim import *"
    ]
   },
   {
@@ -587,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
