--- a/colab/chap09.ipynb
+++ b/colab/chap09.ipynb
@@ -4,26 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling and Simulation in Python\n",
+    "# Chapter 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Modeling and Simulation in Python*\n",
     "\n",
-    "Chapter 9\n",
+    "Copyright 2021 Allen Downey\n",
     "\n",
-    "Copyright 2017 Allen Downey\n",
-    "\n",
-    "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)\n"
+    "License: [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# import everything from SymPy.\n",
-    "from sympy import *\n",
+    "# check if the libraries we need are installed\n",
     "\n",
-    "# Set up Jupyter notebook to display math.\n",
-    "init_printing() "
+    "try:\n",
+    "    import pint\n",
+    "except ImportError:\n",
+    "    !pip install pint\n",
+    "    import pint\n",
+    "    \n",
+    "try:\n",
+    "    from modsim import *\n",
+    "except ImportError:\n",
+    "    !pip install modsimpy\n",
+    "    from modsim import *"
    ]
   },
   {
@@ -72,7 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = symbols('t')\n",
+    "import sympy as sp\n",
+    "\n",
+    "t = sp.symbols('t')\n",
     "t"
    ]
   },
@@ -138,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = Function('f')\n",
+    "f = sp.Function('f')\n",
     "f"
    ]
   },
@@ -187,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfdt = diff(f(t), t)\n",
+    "dfdt = sp.diff(f(t), t)\n",
     "dfdt"
    ]
   },
@@ -213,7 +232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = symbols('alpha')\n",
+    "alpha = sp.symbols('alpha')\n",
     "alpha"
    ]
   },
@@ -230,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq1 = Eq(dfdt, alpha*f(t))\n",
+    "eq1 = sp.Eq(dfdt, alpha*f(t))\n",
     "eq1"
    ]
   },
@@ -247,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_eq = dsolve(eq1)\n",
+    "solution_eq = sp.dsolve(eq1)\n",
     "solution_eq"
    ]
   },
@@ -266,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "C1, p_0 = symbols('C1 p_0')"
+    "C1, p_0 = sp.symbols('C1 p_0')"
    ]
   },
   {
@@ -301,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r, K = symbols('r K')"
+    "r, K = sp.symbols('r K')"
    ]
   },
   {
@@ -317,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq2 = Eq(diff(f(t), t), r * f(t) * (1 - f(t)/K))\n",
+    "eq2 = sp.Eq(sp.diff(f(t), t), r * f(t) * (1 - f(t)/K))\n",
     "eq2"
    ]
   },
@@ -334,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution_eq = dsolve(eq2)\n",
+    "solution_eq = sp.dsolve(eq2)\n",
     "solution_eq"
    ]
   },
@@ -389,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solutions = solve(Eq(at_0, p_0), C1)\n",
+    "solutions = sp.solve(sp.Eq(at_0, p_0), C1)\n",
     "type(solutions), len(solutions)"
    ]
   },
@@ -433,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "particular = simplify(particular)\n",
+    "particular = sp.simplify(particular)\n",
     "particular"
    ]
   },
@@ -486,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logistic = K / (1 + A * exp(-r*t))\n",
+    "logistic = K / (1 + A * sp.exp(-r*t))\n",
     "logistic"
    ]
   },
@@ -505,7 +524,7 @@
    },
    "outputs": [],
    "source": [
-    "simplify(particular - logistic)"
+    "sp.simplify(particular - logistic)"
    ]
   },
   {
@@ -630,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
