--- a/colab/chap08.ipynb
+++ b/colab/chap08.ipynb
@@ -4,31 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling and Simulation in Python\n",
+    "# Chapter 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Modeling and Simulation in Python*\n",
     "\n",
-    "Chapter 8\n",
+    "Copyright 2021 Allen Downey\n",
     "\n",
-    "Copyright 2017 Allen Downey\n",
-    "\n",
-    "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)\n"
+    "License: [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# If we're running on Colab, install modsimpy\n",
-    "# https://pypi.org/project/modsimpy/\n",
+    "# check if the libraries we need are installed\n",
     "\n",
-    "import sys\n",
-    "IN_COLAB = 'google.colab' in sys.modules\n",
-    "\n",
-    "if IN_COLAB:\n",
+    "try:\n",
+    "    import pint\n",
+    "except ImportError:\n",
     "    !pip install pint\n",
+    "    import pint\n",
+    "    \n",
+    "try:\n",
+    "    from modsim import *\n",
+    "except ImportError:\n",
     "    !pip install modsimpy\n",
-    "    !mkdir figs"
+    "    from modsim import *"
    ]
   },
   {
@@ -116,37 +128,12 @@
     "\n",
     "filename = 'World_population_estimates2.csv'\n",
     "if not os.path.exists(filename):\n",
-    "    !wget https://raw.githubusercontent.com/AllenDowney/ModSimPy/master/notebooks/data/World_population_estimates2.csv\n"
+    "    !wget https://raw.githubusercontent.com/AllenDowney/ModSimPy/master/data/World_population_estimates2.csv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_table2(filename):\n",
-    "    tables = pd.read_html(filename, header=0, index_col=0, decimal='M')\n",
-    "    table2 = tables[2]\n",
-    "    table2.columns = ['census', 'prb', 'un', 'maddison', \n",
-    "                  'hyde', 'tanton', 'biraben', 'mj', \n",
-    "                  'thomlinson', 'durand', 'clark']\n",
-    "    return table2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#table2 = read_table2()\n",
-    "#table2.to_csv('data/World_population_estimates2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -251,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -283,8 +270,7 @@
    "source": [
     "system.t_end = 2250\n",
     "results = run_simulation(system, update_func_quad)\n",
-    "plot_results(census, un, results, 'World population projection')\n",
-    "savefig('figs/chap08-fig01.pdf')"
+    "plot_results(census, un, results, 'World population projection')"
    ]
   },
   {
@@ -296,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,12 +340,12 @@
     "\n",
     "filename = 'World_population_estimates3.csv'\n",
     "if not os.path.exists(filename):\n",
-    "    !wget https://raw.githubusercontent.com/AllenDowney/ModSimPy/master/notebooks/data/World_population_estimates3.csv\n"
+    "    !wget https://raw.githubusercontent.com/AllenDowney/ModSimPy/master/data/World_population_estimates3.csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,8 +439,7 @@
     "\n",
     "plt.axvspan(1950, 2016, color='C0', alpha=0.05)\n",
     "plot_results(census, un, results, 'World population projections')\n",
-    "plot_projections(table3)\n",
-    "savefig('figs/chap08-fig02.pdf')"
+    "plot_projections(table3)"
    ]
   },
   {
@@ -479,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,6 +576,13 @@
    "source": [
     "**Related viewing:** You might be interested in this [video by Hans Rosling about the demographic changes we expect in this century](https://www.youtube.com/watch?v=ezVk1ahRF78)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -609,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
