--- a/colab/chap13.ipynb
+++ b/colab/chap13.ipynb
@@ -4,29 +4,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling and Simulation in Python\n",
+    "# Chapter 13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "*Modeling and Simulation in Python*\n",
     "\n",
-    "Chapter 13\n",
+    "Copyright 2021 Allen Downey\n",
     "\n",
-    "Copyright 2017 Allen Downey\n",
-    "\n",
-    "License: [Creative Commons Attribution 4.0 International](https://creativecommons.org/licenses/by/4.0)\n"
+    "License: [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International](https://creativecommons.org/licenses/by-nc-sa/4.0/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Configure Jupyter so figures appear in the notebook\n",
-    "%matplotlib inline\n",
+    "# check if the libraries we need are installed\n",
     "\n",
-    "# Configure Jupyter to display the assigned value after an assignment\n",
-    "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'\n",
-    "\n",
-    "# import functions from the modsim.py module\n",
-    "from modsim import *"
+    "try:\n",
+    "    import pint\n",
+    "except ImportError:\n",
+    "    !pip install pint\n",
+    "    import pint\n",
+    "    \n",
+    "try:\n",
+    "    from modsim import *\n",
+    "except ImportError:\n",
+    "    !pip install modsimpy\n",
+    "    from modsim import *"
    ]
   },
   {
@@ -45,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,8 +269,7 @@
     "\n",
     "decorate(xlabel='Contact rate (beta)',\n",
     "         ylabel='Fraction infected')\n",
-    "\n",
-    "savefig('figs/chap13-fig01.pdf')"
+    "\n"
    ]
   },
   {
@@ -275,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,8 +336,7 @@
     "         loc='upper left')\n",
     "\n",
     "plt.legend(bbox_to_anchor=(1.02, 1.02))\n",
-    "plt.tight_layout()\n",
-    "savefig('figs/chap13-fig02.pdf')"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -332,6 +344,15 @@
    "metadata": {},
    "source": [
     "**Exercise:**  Suppose the infectious period for the Freshman Plague is known to be 2 days on average, and suppose during one particularly bad year, 40% of the class is infected at some point.  Estimate the time between contacts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
    ]
   },
   {
@@ -353,15 +374,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,8 +467,7 @@
     "         ylabel='Fraction infected')\n",
     "\n",
     "plt.legend(bbox_to_anchor=(1.02, 1.02))\n",
-    "plt.tight_layout()\n",
-    "savefig('figs/chap13-fig03.pdf')"
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -470,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -480,9 +491,7 @@
     "\n",
     "decorate(xlabel='Recovery rate (gamma)',\n",
     "         ylabel='Contact rate (beta)',\n",
-    "         title='Fraction infected, contour plot')\n",
-    "\n",
-    "savefig('figs/chap13-fig04.pdf')"
+    "         title='Fraction infected, contour plot')"
    ]
   },
   {
@@ -509,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
